# follow_ws

./: README.md  package.xml  setup.cfg  setup.py
config/: async_config.yaml  gazebo_params.yaml  nav2_params.yaml  ros2_control.yaml
golf_cart/: detect_human.py  follow_human.py  open_isaacsim_stage.py  run_isaacsim.py
launch/: detect_human.launch.py  follow_human.launch.py  gazebo_test.launch.py  robot_control.launch.py  robot_state_publisher.launch.py  run_isaacsim.launch.py
rviz/: navigation_state.rviz  robot_state.rviz  sensors_state.rviz
test/: test_gazebo.py
urdf/: all_sensors.urdf.xacro  inertia.urdf.xacro  ros2_control.urdf.xacro  summit_xls.urdf.xacro  summit_xls_base.urdf.xacro
urdf/2d_lidar/: lidar_2d_plugin.urdf.xacro  sick_s300.urdf.xacro
urdf/depth/: depth_camera_plugin.urdf.xacro  orbbec_astra.urdf.xacro
urdf/imu/: imu_plugin.urdf.xacro  myahrs.urdf.xacro
urdf/structures/: structure_hokuyo.urdf.xacro
urdf/utils/: inertia.urdf.xacro
urdf/wheels/: basic_wheel.urdf.xacro  omni_wheel.urdf.xacro  rubber_wheel.urdf.xacro
worlds/: golf_field.world
