<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>golf_cart</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sanjana@todo.todo">sanjana</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>twist_mux</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>vision_opencv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
